  * checks/fields.pm:
    + [BR] Enforce naming convention for debug package.  (Closes: #645455).
  * checks/files.pm:
    + [BR] Do not report duplicates for package-installs-apt-preferences
      and package-installs-apt-sources.  (Closes: #814521).
    + [NT] Apply patch from Helmut Grohne to detect some possible invalid
      uses of "Multi-Arch: foreign".  (Closes: #856975)
  * checks/menu-format.{desc,pm}:
    + [NT] Update the reference to Desktop Entry Specification to point
      to version 1.1.
    + [NT] Apply patch from Laurent Bigonville to check desktop files
      for missing "Icon" field.  (Closes: #854132)
  * checks/testsuite.{desc,pm}:
    + [NT] Apply patch from Lucas Kanashiro to add a tag for recommending
      packagers to create an autopkgtest for their package.
      (Closes: #859467)

  * coll/debian-readme{,desc}:
    + [NT] Remove.  Merge what little functionality it offers into the
      debian-readme check.

  * data/common/source-fields:
    + [NT] Add new "Testsuite-Restrictions" field.
  * data/obsolete-sites/obsolete-sites:
    + [BR] Apply patch from Hideki Yamane in order to warn about
      fedorahosted.  (Closes: #856954).
    + [NT] Apply patch from Hideki Yamane to warn about codeplex.com
      closing down.  (Closes: #859412).
  * data/scripts/interpreters:
    + [NT] Add stap as a known interpreter.  Thanks to gustavo panizzo
      for the suggestion.  (Closes: #858326)
  * data/spelling/corrections:
    + [NT] Apply patches from Edward Betts to fix bugs in the correction
      word lists.  (Closes: #852005, #852084)
    + [NT] Apply patch from Edward Betts to remove corrections for
      "targetted" and "targetting" as they are valid alternative
      spellings in AU.  (Closes: #852145)
    + [EB] Add some more spelling corrections.  (Closes: #852369, #852404,
      #852407, #852409, #852410, #852411, #852413, #852414, #852416,
      #852419, #852421, #852426)
    + [CL] Add "none were" -> "none was" multiword correction.