@@ -1,20 +1,27 @@
 # Manually maintained list of "standard" files in /usr/share/doc/$pkg
 # These are not enough to consider the package "not-empty"
 #
+# NB: There is a special case in Lintian for ignoring all "README.*"
+# files as well.  They need not be listed here.
+#
 # Please keep this sorted (ignoring case)
 
 AUTHORS
 AUTHORS.gz
+BUGS
+BUGS.gz
 changelog.Debian.gz
 changelog.gz
+CHANGES
+CHANGES.gz
 COPYING.gz
 copyright
 HACKING
 HACKING.gz
 NEWS
+NEWS.Debian
+NEWS.Debian.gz
 NEWS.gz
-README
-README.gz
 TODO
 TODO.gz
 
